--- a/css/estilosCSS.css
+++ b/css/estilosCSS.css
@@ -454,55 +454,49 @@ h2{
 .grid-container-gifs {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1.5fr 1.5fr 1.5fr;
+  grid-template-rows: 1fr;
   gap: 20px 20px;
-  grid-template-areas: "gifUno gifDos gifTres" "gifCuatro gifCinco gifSeis" ". . .";
+  grid-template-areas: "gifUno gifDos gifTres" "gifCuatro gifCinco gifSeis";
 }
 
 .gifUno { 
   grid-area: gifUno;
-  background-color: #f8c86c;
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 160px;
 }
 
 .gifDos { 
   grid-area: gifDos;
-  background-color: #f8c86c;
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 180px;
 }
 
 .gifTres { 
   grid-area: gifTres;
-  background-color: #f8c86c;
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 180px;
 }
 
 .gifCuatro { 
   grid-area: gifCuatro;
-  background-color: #f8c86c;
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 180px;
 }
 
 .gifCinco { 
   grid-area: gifCinco;
-  background-color: #f8c86c;
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 180px;
  }
 
 .gifSeis { 
   grid-area: gifSeis;
-  background-color: #f8c86c; 
-  padding: 20px;
+  padding: 10px;
   margin: 3%;
   min-height: 180px;
 }
@@ -580,7 +574,7 @@ h2{
     float: left;
     width: 25%;
     margin-top: 20px;
-    border: 2px solid #fff;
+    border: 10px solid #fff;
     background:  #f8c86c;
 
 
@@ -636,6 +630,135 @@ h2{
   background: #f5a80f;
 }
 
+:focus{
+  outline: none;
+}
+
+/* Empieza Formulario Contacto */
+
+.contactoInfo{
+  width:1050px;
+  height: 530px;
+  margin: 50px auto;
+  display: flex;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  background: #fff;
+}
+/* Empieza inforamacion de contacto */
+
+.contact-info::before{
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background:#ed9aa0;
+  opacity:0.9;
+}
+.contact-info{
+  width: 38%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-title,
+.info-items{
+  position: relative;
+  z-index: 2;
+  color: #fff;
+}
+.info-title{
+  margin-bottom: 60px;
+}
+.info-title span{
+  font-size: 100px;
+  display: block;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.info-title h2{
+  font-size: 35px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.info-items p{
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600px;
+  margin-bottom: 10px;
+}
+.info-items p:nth-child(1) span{
+  font-size: 30px;
+  margin-right: 10px;
+}
+.info-items p:nth-child(2) span{
+  font-size: 40px;
+  margin-right: 15px;
+  margin-left: 4px;
+}
+
+
+
+/* Empieza formulario de contacto */
+form.form-contact{
+  width: 62%;
+  padding: 30px 40px;
+}
+form.form-contact h2{
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+form.form-contact .user-info{
+  display: flex;
+  flex-direction: column;
+}
+
+form.form-contact label{
+  font-weight: 600;
+}
+
+form.form-contact input,
+form.form-contact textarea{
+ width: 100%;
+ padding: 8px, 0px, 5px;
+ margin-bottom: 20px;
+ border:none;
+ border-bottom: 2px solid #D1D1D1; 
+ font-family: 'Roboto', sans-serif; 
+ color: #5A5A5A;
+ font-weight: 400;
+ font-size: 14px;
+}
+form.form-contact textarea{
+  max-width: 100%;
+  min-width: 100%;
+  max-height:90px;
+}
+form.form-contact input[type="button"]{
+  width: 160px;
+  background: #ed9aa0;
+  padding: 10px;
+  border:none;
+  border-radius: 25px;
+  align-self: flex-end;
+  color: #fff;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif; 
+  font-weight: 600;
+  cursor: pointer; 
+}
+form.form-contact input[type="button"]:hover{
+  background: #f8c86c;
+}
 
 
 
